v 7.6.0
  - Fork repository to groups
  - New rugged version
  - Add CRON=1 backup setting for quiet backups
  - Fix failing wiki restore
  -
  - Add optional Sidekiq MemoryKiller middleware (enabled via SIDEKIQ_MAX_RSS env variable)
  -
  -
  - Create project with repository in synchrony
  - Added ability to create empty repo or import existing one if project does not have repository
  -
  -
  - Reactivate highlight.js language autodetection
  -
  -

v 7.5.0
  - API: Add support for Hipchat (Kevin Houdebert)
  - Add time zone configuration in gitlab.yml (Sullivan Senechal)
  - Fix LDAP authentication for Git HTTP access
  - Run 'GC.start' after every EmailsOnPushWorker job
  - Fix LDAP config lookup for provider 'ldap'
  - Drop all sequences during Postgres database restore
  - Project title links to project homepage (Ben Bodenmiller)
  - Add Atlassian Bamboo CI service (Drew Blessing)
  - Mentioned @user will receive email even if he is not participating in issue or commit
  - Session API: Use case-insensitive authentication like in UI (Andrey Krivko)
  - Tie up loose ends with annotated tags: API & UI (Sean Edge)
  - Return valid json for deleting branch via API (sponsored by O'Reilly Media)
  - Expose username in project events API (sponsored by O'Reilly Media)
  - Adds comments to commits in the API
  - Performance improvements
  - Fix post-receive issue for projects with deleted forks
  - New gitlab-shell version with custom hooks support
  - Improve code 
  - GitLab CI 5.2+ support (does not support older versions)
  - Fixed bug when you can not push commits starting with 000000 to protected branches
  - Added a password strength indicator
  - Change project name and path in one form
  - Display renamed files in diff views (Vinnie Okada)
  - Fix raw view for public snippets
  - Use secret token with GitLab internal API.
  - Add missing timestamps to 'members' table

v 7.4.3
  - Fix raw snippets view
  - Fix security issue for member api